          ticket #28).
        - Rebuild: <prefix>/include/d is always included automatically in the
          import path, so that rebuild can be used more easily in isolation
          with DSSS-installed software.
        - Added `dsss net deplist` command.
        - Made `dsss uninstall` explicitly require an argument.

0.63 from 0.62:
        - Made OS X -arch, -isysroot and -framework flags work with dsss as
          well as rebuild (see ticket #27).
        - Improved documentation.
        - Merged DMD 1.013.
        - Rebuild: Added flags= variable to configuration files (see ticket #44).
        - Added predigen and postdigen commands (see ticket #49).
        - Made `dsss install` install rebuild's man page as well as DSSS' (see
          ticket #47).
        - Rebuild: Added -gui flag (see ticket #50).

0.62 from 0.61:
        - Added man page for DSSS.
        - Made --prefix and family work with relative paths (see ticket #37).
        - Rebuild: No longer links the same library more than once in a row
          (though it will still link it multiple times in total, due to
          complexities of Posix linking) (see ticket #39).
        - Rebuild: Made export_version accept an identifier as well as a string
          (see ticket #40).
        - Rebuild: Now closes the response file properly after using it (see
          ticket #42).
        - Rebuild: Now supports comments in response files (see ticket #43).
        - Rebuild: Allow -arch and -isysroot flags on OS X (see ticket #27).
        - Rebuild: Added path= variable to config files (see ticket #29).
        - sources directory is now created during dsss install (see ticket #36).
        - Rebuild: Executable file name is based on the first source file, not
          the first object file (see ticket #44).

0.61 from 0.60+0.18:
        - Rebuild: Fixed a (potential) segfault bug in rebuild with modules
          with no module declaration.